--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 			<p class="sub_title">
 				An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
 			</p>
+
+			<!-- Finished Prep Section -->
 			<div class="prep">
 				<h4>Preparation time</h4>
 				<ul>
-					<li>Total: Approximately 10 minutes</li>
-					<li>Preparation: 5 minutes</li>
-					<li>Cooking: 5 minutes</li>
+					<li><strong class="bold">Total:</strong> Approximately 10 minutes</li>
+					<li><strong class="bold">Preparation:</strong> 5 minutes</li>
+					<li><strong class="bold">Cooking:</strong> 5 minutes</li>
 				</ul>
 			</div>
 			<div class="ingredients ">
