--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 			<div class="prep">
 				<h4>Preparation time</h4>
 				<ul>
-					<li><strong class="bold">Total:</strong> Approximately 10 minutes</li>
-					<li><strong class="bold">Preparation:</strong> 5 minutes</li>
-					<li><strong class="bold">Cooking:</strong> 5 minutes</li>
+					<li><strong class="bold">Total:</strong><span>Approximately 10 minutes</span></li>
+					<li><strong class="bold">Preparation:</strong> <span>5 minutes</span></li>
+					<li><strong class="bold">Cooking:</strong> <span>5 minutes</span></li>
 				</ul>
 			</div>
 			<div class="ingredients ">
-				<h4 class="young_font">Ingredients</h4>
+				<h2 class="young_font">Ingredients</h2>
 				<ul>
-					<il>2-3 large eggs</il>
-					<il>Salt, to taste</il>
-					<il>Pepper, to taste</il>
-					<il>1 tablespoon of butter or oil</il>
-					<il>Optional fillings: cheese, diced vegetables, cooked meats, herbs</il>
+					<li><span>2-3 large eggs</span></il>
+					<li><span>Salt, to taste</span></il>
+					<li><span>Pepper, to taste</span></il>
+					<li><span>1 tablespoon of butter or oil</span></il>
+					<li><span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></il>
 				</ul>
 			</div>
 			<div class="instructions">
