--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 				An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
 			</p>
 
-			<!-- Finished Prep Section -->
 			<div class="prep">
 				<h4>Preparation time</h4>
 				<ul>
@@ -28,25 +27,25 @@
 					<li><strong class="bold">Cooking:</strong> <span>5 minutes</span></li>
 				</ul>
 			</div>
-			<div class="ingredients ">
+			<div class="ingredients">
 				<h2 class="young_font">Ingredients</h2>
 				<ul>
-					<li><span>2-3 large eggs</span></il>
-					<li><span>Salt, to taste</span></il>
-					<li><span>Pepper, to taste</span></il>
-					<li><span>1 tablespoon of butter or oil</span></il>
-					<li><span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></il>
+					<li><span class="ingre">2-3 large eggs</span></il>
+					<li><span class="ingre">Salt, to taste</span></il>
+					<li><span class="ingre">Pepper, to taste</span></il>
+					<li><span class="ingre">1 tablespoon of butter or oil</span></il>
+					<li><span class="ingre">Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></il>
 				</ul>
 			</div>
 			<div class="instructions">
 				<h4 class="young_font">Instructions</h4>
 				<ol>
-					<li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-					<li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-					<li>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-					<li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-					<li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-					<li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+					<li><span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+					<li><span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+					<li><span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+					<li><span class="bold">Add fillings (optional)</span>: When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+					<li><span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+					<li><span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
 				</ol>
 			</div>
 			<div class="nutrition">
