--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 			<div class="instructions">
 				<h4 class="young_font">Instructions</h4>
 				<ol>
-					<li><span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-					<li><span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-					<li><span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-					<li><span class="bold">Add fillings (optional)</span>: When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-					<li><span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-					<li><span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+					<li><span class="bold">Beat the eggs:</span> <span>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
+					<li><span class="bold">Heat the pan:</span> <span>Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
+					<li><span class="bold">Cook the omelette:</span> <span>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
+					<li><span class="bold">Add fillings (optional)</span>: <span>When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
+					<li><span class="bold">Fold and serve:</span> <span>As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
+					<li><span class="bold">Enjoy:</span> <span>Serve hot, with additional salt and pepper if needed.</span></li>
 				</ol>
 			</div>
 			<div class="nutrition">
-				<h3 class="young_font">Nutrition</h3>
+				<h4 class="young_font">Nutrition</h4>
 				<p>The table below shows nutritional values per serving without the additional fillings.</p>
 				<table>
 					<tr>
