--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
 				<p>The table below shows nutritional values per serving without the additional fillings.</p>
 				<table>
 					<tr>
-						<td>Calories</td>
+						<td class="nutrition-type">Calories</td>
 						<td>277kcal</td>
 					</tr>
 					<tr>
-						<td>Carbs</td>
+						<td class="nutrition-type">Carbs</td>
 						<td>0g</td>
 					</tr>
 					<tr>
-						<td>Protein</td>
+						<td class="nutrition-type">Protein</td>
 						<td>20g</td>
 					</tr>
 					<tr>
-						<td>Fat</td>
+						<td class="nutrition-type">Fat</td>
 						<td>22g</td>
 					</tr>
 				</table>
 			</div>
 		</main>
-		<div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+		<div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Bugzie32">Chris Blagrove</a>.</div>
 	</body>
 </html>
